@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.pixelanime"
        name="PixelAnime"
-       version="1.0.0"
+       version="1.0.1"
        provider-name="www.pixeltouch.me">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
